--- a/Learn Python Basics.ipynb
+++ b/Learn Python Basics.ipynb
@@ -2,22 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "plz Enter first num :10\n",
-      "plz enter second num :10\n",
-      "Result of sum : 20.0\n",
-      "Result of sub: 0.0\n",
-      "result of multiply : 100.0\n"
+      "plz Enter first num :22\n",
+      "plz enter second num :11\n",
+      "Result of sum : 33.0\n",
+      "Result of sub: 11.0\n",
+      "result of multiply : 242.0\n"
      ]
     }
    ],
    "source": [
+    "\"\"\"\"\n",
+    "python \n",
+    "-\n",
+    "-\n",
+    "-\n",
+    "-\n",
+    "\"\"\"\"\n",
+    "#variables (mutable  |   Unmutable )\n",
     "#lab1 vairables(assignment operators) + input method + casting + mathematical operators \n",
     "#--------------------------------------------------------------------------------------\n",
     "#Resd 1st num\n",
